--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/JacketJK/image/logo-Project.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/JacketJK/image/logo-Project.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/JacketJK/image/logo-Project.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/airplane.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/airplane.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/airplane.png">
     <title>Class Room Manager | ระบบบริหารห้องเรียน</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -29,8 +29,13 @@
                     <button class="btn-right-nav"><i class="bi bi-info-circle"></i></button>
                     <button class="btn-right-nav"><i class="bi bi-gear"></i></button>
                 </div>
-                <div class="user-profile">
-                    <img src="https://cdn.jsdelivr.net/gh/JacketJK/image/student.png" class="user-url">
+                <div class="user-profile dropdown">
+                    <img src="https://cdn.jsdelivr.net/gh/JacketJK/image/student.png" class="user-url dropbtn">
+                    <div class="dropdown-content">
+                        <a href="#"><i class="bi bi-person-circle"></i> โปรไฟล์</a>
+                        <a href="#"><i class="bi bi-gear"></i> ตั้งค่าบัญชีผู้ใช้</a>
+                        <a href="#"><i class="bi bi-box-arrow-right"></i> ออกจากระบบ</a>
+                    </div>
                 </div>
                 <div class="span-user">
                     <span>เด็กชายจักรกฤษณ์ หวังสุข</span>
@@ -135,6 +140,8 @@
                                 <i class="bi bi-arrow-up-right"></i>
                             </button>
                         </div>
+                        <span id="now_today"></span>
+
                         <div id="chart_time_study"></div>
                     </div>
                     <div class="box-center-content">
